@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - make sure cflags and libs are stored as list ref
 
 0.18_03   2014-06-10 09:06:55 -0400
   - fix prereqs
